--- a/Cursos/Curso - Construindo páginas para internet com Bootstrap/css/style.css
+++ b/Cursos/Curso - Construindo páginas para internet com Bootstrap/css/style.css
@@ -4,13 +4,13 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .navbar {
-    background-color: rgb(28, 141, 13);
+    background-color: rgb(133, 132, 132);
     padding-left: 50px;
 }
 
 .quem-somos {
-    background-color: rgb(113, 143, 240);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: black;
 }
 
 .margin {
@@ -26,11 +26,12 @@ body{
     text-align: justify;
 }
 .parceiros {
-    background-color: #8b8beb;
-    color: white
+    background-color: rgb(255, 255, 255);
+    color: black;
+    
 }
 
 .bg-footer {
-    background-color: black;
-    color: white;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
